[package]
name = "axum-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] } 
wait-timeout = "0.2.0"
tower-http = { version = "0.5.2", features = ["fs", "limit", "trace"] }
serde = { version = "1.0.210", features =["derive"] }
serde_json = "1.0.128"
tempfile =  "3.12.0"

[[bin]]
name = "axum-portfolio"
path = 'src/main.rs'
